--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ crate-type = ["cdylib"]
 [dependencies]
 js-sys = "0.3.67"
 wasm-bindgen = "0.2.90"
-naga = { git = "https://github.com/elftausend/wgpu", features = ["wgsl-in", "glsl-out"]}
+# naga = { git = "https://github.com/elftausend/wgpu", features = ["wgsl-in", "glsl-out"]}
+naga = { path = "../wgpu/naga", features = ["wgsl-in", "glsl-out"]}
 
 [dependencies.web-sys]
 version = "0.3.4"
@@ -24,5 +25,9 @@ features = [
   'WebGl2RenderingContext',
   'WebGlProgram',
   'WebGlShader',
+  'WebGlUniformLocation',
+  'WebGlTexture',
+  'WebGlFramebuffer',
+  'WebGlSampler',
   'Window',
 ]
